Actualización de estilo: Mejoras en la barra de navegación y botón de cotización

--- a/index.html
+++ b/index.html
@@ -22,12 +22,44 @@
     <meta property="og:title" content="Julian Herrera | Impulsa tu Éxito Digital" />
     <meta property="og:description" content="Soluciones digitales innovadoras y estrategias a medida para potenciar tu presencia online y alcanzar el éxito empresarial." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    <meta property="og:url" content="https://jhservices.com" />
+    <meta property="og:image" content="https://julianherrera.dev.vercel.app/og-image.jpg" />
+    <meta property="og:url" content="https://julianherrera.dev.vercel.app" />
+    <meta property="og:site_name" content="Julian Herrera | Desarrollo Web" />
+    <meta property="og:locale" content="es_DO" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@jh_services" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:creator" content="@jh_services" />
+    <meta name="twitter:image" content="/og-image.jpg" />
+    
+    <!-- Schema.org para Google -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ProfessionalService",
+      "name": "Julian Herrera | Desarrollo Web",
+      "image": "https://julianherrera.dev.vercel.app/og-image.jpg",
+      "description": "Soluciones digitales innovadoras y estrategias a medida para potenciar tu presencia online.",
+      "address": {
+        "@type": "PostalAddress",
+        "addressRegion": "Santo Domingo",
+        "addressCountry": "DO"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": "18.4861",
+        "longitude": "-69.9312"
+      },
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+        "opens": "09:00",
+        "closes": "18:00"
+      },
+      "telephone": "+18091234567",
+      "url": "https://julianherrera.dev.vercel.app"
+    }
+    </script>
   </head>
 
   <body>
